--- a/01_thangnv/demo-html5-css3/css/style.css
+++ b/01_thangnv/demo-html5-css3/css/style.css
@@ -102,6 +102,20 @@
     column-gap: 190px;
 }
 
+/*Media-query*/
+.media-query{
+    background: #4240b3;
+    height: 200px;
+    width: 200px;
+}
+@media screen and (min-width: 480px) {
+	.media-query{height: 200px;width: 300px; background: red}
+}
+
+@media screen and (min-width: 720px) {
+	.media-query{height: 200px;width: 400px; background: yellow}
+}
+
 /*Transition*/
 .transition{
     height: 100px;
@@ -135,4 +149,51 @@
     position: relative;
     animation-name: animations;
     animation-duration: 5s;
+}
+
+/*Text Effect*/
+.text-overflow{
+    width: 300px;
+    overflow: hidden;
+    white-space: nowrap; 
+    border: solid 1px;
+}
+.clip{
+    
+    text-overflow: clip;
+}
+.ellipsis{
+    text-overflow: ellipsis;
+}
+.word{
+    margin: 5px;
+    border: solid 1px;
+    width: 200px;
+    height: 200px;
+}
+.wrap{
+    
+    word-wrap: break-word;
+}
+.break{
+    word-break: break-all;
+}
+
+/*Resize*/
+.resize{
+    margin: 5px;
+    border: 1px solid;
+    padding: 20px; 
+    width: 200px;
+    overflow: auto;
+}
+.vertical{
+    
+    resize: vertical;
+}
+.horizontal{
+    resize: horizontal;
+}
+.none{
+    resize: none;
 }
