--- a/02_cuongnq/ThuchanhHTML5-CSS3/css/style2.css
+++ b/02_cuongnq/ThuchanhHTML5-CSS3/css/style2.css
@@ -1,69 +1,68 @@
-* {
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
+*{
+	margin: 0;
+	padding: 0;
 }
 header{
 	text-align: center;
-	background-color: gray;
-	height: 200px;
-	line-height: 200px;
+	width: 90%;
+	height: 80px;
+	line-height: 80px;
+	background: gray;
+	margin-right: auto;
+	margin-left: auto;
+	color: white;
 }
-nav {
-    float: left;
-    width: 30%;
-    height: 300px;
-    background: #ccc;
-    padding: 20px;
+nav{
+	text-align: center;
+	width: 90%;
+	height: 80px;
+	line-height: 40px;
+	background:blue;
+	margin-right: auto;
+	margin-left: auto;
 }
-nav ul{
-	list-style-type: none;
-	padding: 0;
-}
-article {
-    float: left;
-    padding: 20px;
-    width: 70%;
-    background-color: #f1f1f1;
-    height: 300px; 
-    text-align: center;
-}
+nav ul li{
 
-section:after {
-    content: "";
-    display: table;
-    clear: both;
+	list-style: none;
+	display: inline-block;
+	color: #fff;
+	margin-right:12px; 
+}
+nav ul li a{
+	text-decoration: none;
+}
+nav ul li a:hover{
+	background-color: yellow;
+	color: red;
+}
+section{
+	text-align: center;
+	width: 90%;
+	height: 500px;
+	background: gray;
+	margin-right: auto;
+	margin-left: auto;
+}
+article{
+	float: left;
+	width: 60%;
+	height: 350px;
 }
 aside{
-	display: block;
-	text-align: center;
-	background-color: blue;
-	font-weight: bold;
+	float: left;
+	width: 40%;
+	background: #ccc;
+	height: 500px;
 }
 
-figure {
-    display: block;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    margin-left: 40px;
-    margin-right: 40px;
-}
-#datalist{
-	float: right;
-	background-color: gray;
-}
 footer{
-	background-color: black;
 	text-align: center;
+	width: 90%;
+	height: 200px;
+	line-height: 200px;
+	background: black;
 	color: white;
-	height: 150px;
-	line-height: 150px;
+	margin-right: auto;
+	margin-left: auto;
 }
-@media (max-width: 600px) {
-    nav, article {
-        width: 100%;
-        height: auto;
-    }
-}
+
