--- a/07_kiendv/Thuchanh_HTML5_CSS3/css3/styles.css
+++ b/07_kiendv/Thuchanh_HTML5_CSS3/css3/styles.css
@@ -119,6 +119,11 @@
 	border: 1px solid red;
 	word-wrap: break-all;
 }
+#te4 p{
+	width: 100px;
+	border: 1px solid red;
+	word-wrap: keep-all;
+}
 #ui1 {
 	border: 2px solid;
 	padding: 20px;
