--- a/02_cuongnq/thuchanh CSS3/css/style3.css
+++ b/02_cuongnq/thuchanh CSS3/css/style3.css
@@ -86,7 +86,7 @@ ul li:hover{
 #grad4 {
     height: 200px;
     background: red; /* For browsers that do not support gradients */
-    background: repeating-linear-gradient(90deg,red,yellow 7%,green 10%); /* Standard syntax (must be last) */
+    background: repeating-linear-gradient(red 20%,yellow 30%,green 60%); /* Standard syntax (must be last) */
 }
 #grad2 {
     height: 150px;
@@ -149,4 +149,60 @@ h1 {
     50%  {background-color:blue; left:200px; top:200px;}
     75%  {background-color:green; left:0px; top:200px;}
     100% {background-color:red; left:0px; top:0px;}
+}
+.newspaper {
+    -webkit-column-count: 3; /* Chrome, Safari, Opera */
+    -moz-column-count: 3; /* Firefox */
+    column-count: 3;
+    -webkit-column-gap: 40px; /* Chrome, Safari, Opera */
+    -moz-column-gap: 40px; /* Firefox */
+    column-gap: 40px;
+    -webkit-column-rule: 1px solid lightblue; /* Chrome, Safari, Opera */
+    -moz-column-rule: 1px solid lightblue; /* Firefox */
+    column-rule: 1px solid lightblue;
+}
+.text-overflow
+{
+    float: left;
+
+    margin: 50px 0 0 20px;
+    white-space: nowrap;
+    width: 200px;
+    border: 1px solid #000000;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.word-wrap{
+    float: left;
+    margin: 50px 0 0 20px;
+    white-space: nowrap;
+    border: solid 1px;
+    width: 100px;
+    height: 18px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.word-break{
+    float: left;
+    margin: 50px 0 0 20px;
+    width: 200px;
+    border: 1px solid red;
+    word-break: break-all;
+}
+
+
+/*xử lý phía giao diện người dùng*/
+.user-interface
+{
+    margin: 400px 0 0 50px;
+    border: 2px solid;
+    padding: 20px;
+    width: 500px;
+    resize: horizontal;
+    overflow: auto;
+
+    outline: 4px solid red;
+    outline-offset: 15px;
+
 }
