--- a/06_trongnd/CSS/style.css
+++ b/06_trongnd/CSS/style.css
@@ -14,6 +14,7 @@ header {
     text-align: center;
     background: #1abc9c;
     color: white;
+    opacity: 0.0;
 }
 
 /* Increase the font size of the heading */
@@ -87,7 +88,6 @@ nav a:hover {
 }
 .border_radius img{
         border:1px solid #1abc9c;
-       
         border-radius: 20px 0px 30px 50px;
         box-shadow: 10px 10px 10px #333;
 }
@@ -95,7 +95,7 @@ nav a:hover {
     width: 100%;
     padding: 20px;
     border: 10px solid transparent;
-    border-image: url(../border.png) 30 round;
+    border-image: url(../border.png) 20% round;
 }
 .Transition_hover{
     height: 100px;
@@ -160,7 +160,7 @@ nav a:hover {
     width: 300px;
     resize: both; 
     margin: 30px;
-    /* vertical theo chiều dọc */
+    /* vertical theo chiều dọc và ngang */
     overflow: auto;
 }
 .fakeimg .Animation1{
@@ -230,3 +230,9 @@ footer {
         width: 100%;
     }
 }
+div.ex1 {
+    margin: 20px;
+    border: 1px solid black;
+    outline: 4px solid red;
+    outline-offset: 15px;
+} 
