--- a/02_cuongnq/Thuchanh HTML5/css/style2.css
+++ b/02_cuongnq/Thuchanh HTML5/css/style2.css
@@ -17,7 +17,7 @@ nav{
 	width: 90%;
 	height: 80px;
 	line-height: 40px;
-	background:blue;
+	background:yellow;
 	margin-right: auto;
 	margin-left: auto;
 }
@@ -25,10 +25,12 @@ nav ul li{
 
 	list-style: none;
 	display: inline-block;
-	color: #fff;
+	color: white;
 	margin-right:12px; 
 }
 nav ul li a{
+	font-weight: bold;
+	color: white;
 	text-decoration: none;
 }
 nav ul li a:hover{
