convert psd to html

--- a/02_cuongnq/Thuchanh HTML5/css/style2.css
+++ b/02_cuongnq/Thuchanh HTML5/css/style2.css
@@ -67,4 +67,7 @@ footer{
 	margin-right: auto;
 	margin-left: auto;
 }
-
+meter::-webkit-meter-optimum-value {
+    background: blue;
+    border-radius: 3px;
+}
