--- a/06_trongnd/SASS/style.css
+++ b/06_trongnd/SASS/style.css
@@ -1,13 +1,11 @@
-.class_1 {
-  color: #f94342;
-  font-weight: bold;
-  padding: 15px;
-  margin: 5px; }
-  .class_1 a {
-    color: #fff;
-    text-decoration: underline; }
-    .class_1 a:hover, .class_1 a:visited {
-      color: #f3f3f3;
-      text-decoration: none; }
+.menu {
+  width: 1000px;
+  padding: 0px;
+  margin: 0px;
+  background-color: red; }
+  .menu ul {
+    list-style: none; }
+    .menu ul li {
+      display: inline; }
 
 /*# sourceMappingURL=style.css.map */
