--- a/06_trongnd/SASS/style.scss
+++ b/06_trongnd/SASS/style.scss
@@ -1,14 +1,12 @@
-.class_1 {
-    color: #f94342;
-    font-weight: bold;
-    padding: 15px;
-    margin: 5px;
-    a {
-    color: #fff;
-    text-decoration: underline;
-    &:hover,&:visited {
-    color: #f3f3f3;
-    text-decoration: none;
+.menu{
+    width: 1000px;
+    padding: 0px;
+    margin: 0px;
+    background-color: red;
+    ul{
+        list-style: none;
+        li{
+            display: inline;
+        }
     }
-    }
-   }
+}
