--- a/07_kiendv/Thuchanh_HTML5_CSS3/css3/sass/styles.scss
+++ b/07_kiendv/Thuchanh_HTML5_CSS3/css3/sass/styles.scss
@@ -1,3 +1,27 @@
+.class_1 {
+	color: #f94342;
+	font-weight: bold;
+	padding: 15px;
+	margin: 5px;
+	a {
+		color: #fff;
+		text-decoration: underline;
+		&:hover,&:visited {
+			color: #f3f3f3;
+			text-decoration: none;
+		}
+	}
+}
+#br1 {
+	#text {
+		p {
+			color: blue;
+			&:hover {
+				color: red;
+			}
+		}
+	}
+}
 #br1 {
 	width: 200px;
 	height: 200px;
