--- a/01_thangnv/demogiaodien/css/style.css
+++ b/01_thangnv/demogiaodien/css/style.css
@@ -5,19 +5,11 @@
     font-family: Roboto;
 }
 
-@media only screen and (min-width: 960) {
-    body{
-        width: 960px;
-        margin: 0 auto;
-    }
+body{
+    max-width: 960px;
+    margin: 0 auto;
 }
 
-@media screen and (max-width: 960) {
-    body{
-        width: 960px;
-        margin: 0 auto;
-    }
-}
 
 li{
     list-style-type: none;
