--- a/07_kiendv/Vinsofts/src/sass/styles.scss
+++ b/07_kiendv/Vinsofts/src/sass/styles.scss
@@ -18,10 +18,10 @@
 }
 header {
 	nav {
+		background: #ffffff;
 		ul {
 			.active {
 				background: #00a2ed;
-				border-radius: 40%;
 				a {
 					padding:8px 14px 8px 14px !important;
 				}
@@ -29,8 +29,21 @@ header {
 		}
 	}
 }
+.sticky.is-sticky {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+}
 h1 {
 	margin: 30px 0 35px 0;
+}
+section {
+	.clients {
+		text-align: center;
+	}
 }
 footer {
 	padding: 0 30px 0 30px;
@@ -45,5 +58,26 @@ footer {
 	#googleMap {
 		width: 100%;
 		height: 225px;
+	}
+}
+@media all and (max-width: 425px) {
+	section {
+		.clients {
+			.client4 {
+				display: none;
+			}
+			.client5 {
+				display: none;
+			}
+		}
+	}
+}
+@media all and (max-width: 320px) {
+	section {
+		.clients {
+			.col {
+				padding: 0;
+			}
+		}
 	}
 }
