--- a/07_kiendv/Vinsofts/src/css/styles.css
+++ b/07_kiendv/Vinsofts/src/css/styles.css
@@ -21,8 +21,13 @@ header nav {
     background: #00a2ed; }
     header nav ul .active a {
       padding: 8px 14px 8px 14px !important; }
+  header nav .mobile {
+    display: none; }
+    header nav .mobile a {
+      color: rgba(0, 0, 0, 0.5);
+      padding: 0 30px 0 0; }
 
-.sticky.is-sticky {
+.sticky .is-sticky {
   position: fixed;
   left: 0;
   right: 0;
@@ -48,6 +53,17 @@ footer {
     width: 100%;
     height: 225px; }
 
+@media all and (max-width: 991px) {
+  header nav .fb {
+    display: none; }
+  header nav .tw {
+    display: none; }
+  header nav .ig {
+    display: none; }
+  header nav .gg {
+    display: none; }
+  header .mobile {
+    display: block !important; } }
 @media all and (max-width: 425px) {
   section .clients .client4 {
     display: none; }
