--- a/07_kiendv/Vinsofts/src/sass/styles.scss
+++ b/07_kiendv/Vinsofts/src/sass/styles.scss
@@ -27,15 +27,22 @@ header {
 				}
 			}
 		}
+		.mobile {
+			display: none;
+			a {
+				color: rgba(0,0,0,.5);
+				padding: 0 30px 0 0;
+			}
+		}
 	}
 }
-.sticky.is-sticky {
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  z-index: 1000;
-  width: 100%;
+.sticky .is-sticky {
+	position: fixed;
+	left: 0;
+	right: 0;
+	top: 0;
+	z-index: 1000;
+	width: 100%;
 }
 h1 {
 	margin: 30px 0 35px 0;
@@ -58,6 +65,27 @@ footer {
 	#googleMap {
 		width: 100%;
 		height: 225px;
+	}
+}
+@media all and (max-width: 991px) {
+	header {
+		nav {
+			.fb {
+				display: none;
+			}
+			.tw {
+				display: none;
+			}
+			.ig {
+				display: none;
+			}
+			.gg {
+				display: none;
+			}
+		}
+		.mobile {
+			display: block !important;
+		}
 	}
 }
 @media all and (max-width: 425px) {
