--- a/05_tupa/cat-giao-dien/css/style.scss
+++ b/05_tupa/cat-giao-dien/css/style.scss
@@ -12,7 +12,7 @@ a{
     color:#838383;
 }
 body{
-    font-family: Arial;
+    font-family: 'Roboto', sans-serif;
     font-size: 12px;
     main{
         width:1000px;
@@ -20,7 +20,7 @@ body{
         header{
             height: 85px;
             .header-left{
-                width: 300px;
+                width: 30%;
                 float: left;
                 img{
                     margin-left:20px;
@@ -31,7 +31,7 @@ body{
                 }
             }
             .header-right{
-                width:700px;
+                width:70%;
                 float: left;
                 .header-right-top{
                     height: 30px;
@@ -46,10 +46,10 @@ body{
                         }
                     }
                 }
-                nav{
+                .menu{
                     height: 40px;
-                    width: 800px;
-                    ul.menu{
+                    width: 700px;
+                    ul.menu-con{
                         margin-left:-15px;
                         li{
                             float:left;
@@ -100,7 +100,7 @@ body{
         }
         content{
             height: 1000px;
-            width: 1000px;
+            width: 100%;
             section.title{
                 margin-top:20px;
                 text-align:center;
@@ -119,8 +119,8 @@ body{
                     ul{
                         margin-left:20px;
                         li{
-                            float: left;
-                            width:290px;
+                            float:left;
+                            width:29%;
                             text-align: center;
                             color:#838383;
                             margin-right:30px;
@@ -157,7 +157,7 @@ body{
                 margin-top:30px;
                 ul{
                     li{
-                        display:inline;
+                        float:left;
                         padding:30px;
                         margin-left:30px;
                     }
@@ -168,7 +168,7 @@ body{
                 ul{
                     li{
                         float:left;
-                        width: 300px;
+                        width: 30%;
                         margin-left:30px;
                         .product-title{
                             margin:5px;
@@ -185,12 +185,12 @@ body{
         footer{
             margin-top:40px;
             height: 400px;
-            width: 1000px;
+            width: 100%;
             background-color: #323232;
             color:white;
             .footer-about{
                 float:left;
-                width:250px;
+                width:25%;
                 margin-left:30px;
                 margin-top:40px;
                 .footer-about-title{
@@ -202,7 +202,7 @@ body{
             }
             .footer-contact{
                 float:left;
-                widows: 300px;
+                widows: 30%;
                 margin-left:30px;
                 margin-top:40px;
                 .footer-contact-title{
@@ -211,7 +211,7 @@ body{
             }
             .footer-info{
                 float:left;
-                widows: 300px;
+                width: 30%;
                 margin-left:30px;
                 margin-top:40px;
                 .footer-info-title{
@@ -221,4 +221,41 @@ body{
         }
     }
 }
+@media all and (max-width: 1000px){
+    main{width:100%;}
+    header{width:100%}
+    .slide{width:100%}
+    content{width:100%}
+    footer{width:100%}
+}
+@media all and (max-width: 800px){
+    .header-left{width:100%;text-align:center;margin-left:200px;margin-bottom:20px;}
+    .header-right{width:100%;clear:both}
+    .slide{width:75%}
+    content section.title{width:100%;margin-left:-150px;}
+    content article.box-main ul li{width:100%;clear: both;margin-left:180px;}
+    content article.people ul li{width:100%;clear: both;}
+    content article.people ul li img{margin-left:250px;}
+    content article.product ul li{width:100%;clear: both;padding-left:180px;}
+    .footer-about{width:100%}
+    .footer-contact{display:none;}
+    .footer-info{width: 100%}
+}
+nav.menu-responsive{background-color:white;}
+nav.menu-responsive select{background-color: #fff;height:35px;display:none;}
 
+@media all and (max-width:600px){
+    .header-left{width:100%;margin-left:40px;}
+    .header-right-top{display:none}
+    .menu{display:none};
+    nav.menu-responsive select{display:block;width:100%}
+    .slide{width:60%}
+    content section.title{width:100%;margin-left:-300px;}
+    content article.box-main ul li{width:100%;clear: both;margin-left:40px;}
+    content article.people ul li{width:100%;clear: both;}
+    content article.people ul li img{margin-left:100px;}
+    content article.product ul li{width:100%;clear:both;padding-left:40px;}
+    .footer-about{display: none;}
+    .footer-contact{display:none;}
+    .footer-info{width: 100%}
+}
