--- a/07_kiendv/Vinsofts/src/css/styles.css
+++ b/07_kiendv/Vinsofts/src/css/styles.css
@@ -24,7 +24,8 @@
 header nav {
   background: #ffffff; }
   header nav ul .active {
-    background: #00a2ed; }
+    background: #00a2ed;
+    border-radius: 25px; }
     header nav ul .active a {
       padding: 8px 14px 8px 14px !important; }
   header nav .mobile {
@@ -32,6 +33,8 @@ header nav {
     header nav .mobile a {
       color: rgba(0, 0, 0, 0.5);
       padding: 0 30px 0 0; }
+  header nav .navbar-brand p {
+    font-size: 9px; }
 
 .sticky .is-sticky {
   position: fixed;
@@ -40,6 +43,9 @@ header nav {
   top: 0;
   z-index: 1000;
   width: 100%; }
+
+.sticky-wrapper {
+  height: 85px !important; }
 
 h1 {
   margin: 30px 0 35px 0; }
