--- a/07_kiendv/Vinsofts/src/sass/styles.scss
+++ b/07_kiendv/Vinsofts/src/sass/styles.scss
@@ -28,6 +28,7 @@ header {
 		ul {
 			.active {
 				background: #00a2ed;
+				border-radius: 25px;
 				a {
 					padding:8px 14px 8px 14px !important;
 				}
@@ -40,6 +41,11 @@ header {
 				padding: 0 30px 0 0;
 			}
 		}
+		.navbar-brand {
+			p {
+				font-size: 9px;
+			}
+		}
 	}
 }
 .sticky .is-sticky {
@@ -49,6 +55,9 @@ header {
 	top: 0;
 	z-index: 1000;
 	width: 100%;
+}
+.sticky-wrapper {
+	height: 85px !important;
 }
 h1 {
 	margin: 30px 0 35px 0;
