--- a/04_datht/cat-web/css/style.css
+++ b/04_datht/cat-web/css/style.css
@@ -24,9 +24,10 @@ header .header__right {
     header .header__right .header__right__menu ul {
       padding-left: 8px; }
       header .header__right .header__right__menu ul li a {
+        font-weight: bold;
         color: #838383;
         margin: 0px;
-        padding: 5px 10px;
+        padding: 5px 8px;
         border-radius: 22px; }
         header .header__right .header__right__menu ul li a:hover {
           color: white;
@@ -57,12 +58,14 @@ footer {
   footer h4 {
     padding-bottom: 10px;
     border-bottom: 1px solid wheat; }
-  footer .form-guest #add__form {
-    color: #323232;
-    background: wheat;
-    padding: 5px 10px;
-    border-radius: 10px;
-    display: none; }
+  footer .form-guest {
+    padding: 0px; }
+    footer .form-guest #add__form {
+      color: #323232;
+      background: wheat;
+      padding: 5px 10px;
+      border-radius: 10px;
+      display: none; }
 
 .dash {
   margin-top: 10px; }
@@ -99,6 +102,9 @@ footer {
     display: block; }
   footer .form-guest .form {
     display: none; }
+  footer .map {
+    display: none; } }
+@media (min-width: 769px) and (max-width: 992px) {
   footer .map {
     display: none; } }
 
