--- a/03_duongab/DemoSASS/style6.css
+++ b/03_duongab/DemoSASS/style6.css
@@ -1,19 +1,19 @@
 .item-1 {
-  width: 1em; }
+  width: 1px; }
 
 .item-2 {
-  width: 2em; }
+  width: 2px; }
 
 .item-3 {
-  width: 3em; }
+  width: 3px; }
 
 .item-4 {
-  width: 4em; }
+  width: 4px; }
 
 .item-5 {
-  width: 5em; }
+  width: 5px; }
 
 .item-6 {
-  width: 6em; }
+  width: 6px; }
 
 /*# sourceMappingURL=style6.css.map */
