--- a/01_thangnv/demogiaodien(scss_bootstrap)/css/style.css
+++ b/01_thangnv/demogiaodien(scss_bootstrap)/css/style.css
@@ -22,7 +22,8 @@ a {
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 35%; }
+    width: 35%;
+    background: transparent; }
     .header-page .logo-slogan .logo {
       height: 55px;
       margin: 0.5em 2em; }
@@ -30,6 +31,8 @@ a {
       height: 30px;
       font-size: 9.86px;
       margin: 0 3em; }
+  .header-page .mini-menu {
+    display: none; }
   .header-page .contact-menu {
     height: 100%;
     width: 75%;
@@ -43,7 +46,10 @@ a {
         display: flex;
         justify-content: flex-end; }
         .header-page .contact-menu .contact ul li {
-          margin: 0 0.5em; }
+          margin-left: 1em; }
+          .header-page .contact-menu .contact ul li p img {
+            margin-right: 0.2em;
+            margin-bottom: 0.3em; }
     .header-page .contact-menu .menu {
       height: 50px;
       line-height: 50px;
@@ -59,7 +65,7 @@ a {
           .header-page .contact-menu .menu .left-menu ul li {
             height: 20px;
             line-height: 20px;
-            margin: 0 0.3em; }
+            margin-left: 0.6em; }
             .header-page .contact-menu .menu .left-menu ul li a {
               height: 20px;
               margin: 0 5px; }
@@ -69,45 +75,215 @@ a {
             .header-page .contact-menu .menu .left-menu ul li:hover a {
               color: #ffffff;
               text-decoration-line: none; }
-      .header-page .contact-menu .menu .right-menu {
-        margin-left: 0.5em; }
-        .header-page .contact-menu .menu .right-menu ul {
-          display: flex; }
-          .header-page .contact-menu .menu .right-menu ul li {
-            margin: -0.3em 0.2em; }
+      .header-page .contact-menu .menu .right-menu ul {
+        display: flex; }
+        .header-page .contact-menu .menu .right-menu ul li {
+          margin-top: -0.3em;
+          margin-left: 0.4em; }
 
-.out-services {
-  text-align: center; }
-  .out-services h2 {
+.our-services {
+  text-align: center;
+  width: 100%; }
+  .our-services h2 {
     margin: 32px;
     font-size: 29.3 px;
     font-weight: bold; }
-  .out-services .content-our-services {
+  .our-services .content-our-services {
     display: flex; }
-    .out-services .content-our-services div {
+    .our-services .content-our-services div {
       margin: 0 10px; }
-  .out-services div img {
-    height: 96px; }
-  .out-services div h5 {
-    margin-top: 12px;
-    font-size: 14.86px;
-    font-weight: bold;
-    height: 40px;
-    line-height: 20px;
-    overflow: hidden; }
-  .out-services div p {
-    font-size: 11.86px;
-    height: 60px;
-    line-height: 20px;
-    overflow: hidden; }
-  .out-services .mobile {
+  .our-services .item-content-our-services {
     width: 35%; }
-  .out-services .web {
+    .our-services .item-content-our-services img {
+      height: 96px; }
+    .our-services .item-content-our-services h5 {
+      margin-top: 12px;
+      font-size: 14.86px;
+      font-weight: bold;
+      height: 20px;
+      line-height: 20px;
+      overflow: hidden; }
+    .our-services .item-content-our-services p {
+      font-size: 11.86px;
+      height: 60px;
+      line-height: 20px;
+      overflow: hidden; }
+
+.our-clients {
+  text-align: center; }
+  .our-clients h2 {
+    margin: 32px;
+    font-size: 29.3 px;
+    font-weight: bold; }
+  .our-clients .content-our-clients {
+    display: flex;
+    margin: 0 2em; }
+    .our-clients .content-our-clients div {
+      width: 20%; }
+
+.our-articles h2 {
+  margin: 32px;
+  font-size: 29.3 px;
+  font-weight: bold;
+  text-align: center; }
+.our-articles .content-our-articles {
+  display: flex; }
+  .our-articles .content-our-articles h2 {
+    margin: 32px;
+    font-size: 29.3 px;
+    font-weight: bold; }
+  .our-articles .content-our-articles .item-content-our-articles {
+    margin: 0 10px;
     width: 35%; }
-  .out-services .custom {
-    width: 35%; }
+    .our-articles .content-our-articles .item-content-our-articles img {
+      width: 100%; }
+    .our-articles .content-our-articles .item-content-our-articles h5 {
+      margin-top: 0.8em;
+      font-size: 13.3px;
+      font-weight: bold;
+      height: 20px;
+      line-height: 20px;
+      overflow: hidden; }
+    .our-articles .content-our-articles .item-content-our-articles p {
+      font-size: 9.86px;
+      height: 54px;
+      line-height: 18px;
+      overflow: hidden; }
+
+footer {
+  min-height: 400px;
+  background: #323232;
+  display: flex; }
+  footer .item-footer {
+    margin: 2em 2em;
+    width: 35%;
+    color: #ffffff;
+    font-weight: bold; }
+    footer .item-footer h4 {
+      font-size: 14.86px;
+      line-height: 20px;
+      font-weight: bold; }
+    footer .item-footer img {
+      height: 3px;
+      width: 100%; }
+    footer .item-footer div p {
+      color: #ffffff;
+      font-size: 10.86px; }
+    footer .item-footer .map-info {
+      width: 100%;
+      height: auto; }
+
+.firstlastname {
+  display: flex; }
+  .firstlastname #firstname {
+    width: 45%; }
+  .firstlastname #lastname {
+    margin-left: 0.3em;
+    width: 60%; }
 
 .carousel-item img {
   width: 100%; }
+
+.btn {
+  height: 30px;
+  margin: 0;
+  padding: 0 0.2em; }
+
+.form-group label {
+  font-size: 10.86px;
+  color: #66614d;
+  font-weight: bold; }
+
+.form-control {
+  height: 30px; }
+
+@media screen and (max-width: 800px) {
+  body {
+    max-width: 800px;
+    margin: 0 auto; }
+
+  .our-services .content-our-services {
+    flex-wrap: wrap;
+    justify-content: center; }
+    .our-services .content-our-services .item-content-our-services {
+      width: 45%; }
+
+  .our-clients .content-our-clients {
+    flex-wrap: wrap;
+    justify-content: center; }
+    .our-clients .content-our-clients div {
+      width: 33%; }
+
+  .our-articles .content-our-articles {
+    flex-wrap: wrap;
+    justify-content: center; }
+    .our-articles .content-our-articles .item-content-our-articles {
+      width: 45%; }
+
+  footer {
+    flex-wrap: wrap; }
+    footer .item-footer {
+      width: 100%; } }
+@media screen and (max-width: 680px) {
+  .header-page .contact-menu {
+    display: none; }
+  .header-page .mini-menu {
+    margin-right: 2em;
+    width: 75%;
+    display: flex;
+    flex-direction: row-reverse;
+    position: relative;
+    margin-top: 30px; }
+    .header-page .mini-menu div {
+      margin-top: 32px;
+      background: #ffffff;
+      border-radius: 5px;
+      position: absolute;
+      z-index: 100; }
+      .header-page .mini-menu div a {
+        color: #00a2ed;
+        font-weight: bold;
+        font-size: 11.86px; }
+    .header-page .mini-menu button {
+      color: #00a2ed;
+      background: #ffffff;
+      border: 2px solid #00a2ed;
+      padding: 0 5px;
+      font-weight: bold;
+      font-size: 11.86px; } }
+@media screen and (max-width: 640px) {
+  body {
+    max-width: 640px;
+    margin: 0 auto; }
+
+  .our-services .content-our-services {
+    flex-wrap: wrap;
+    justify-content: center; }
+    .our-services .content-our-services .item-content-our-services {
+      width: 65%; }
+
+  .our-clients .content-our-clients {
+    flex-wrap: wrap;
+    justify-content: center; }
+    .our-clients .content-our-clients div {
+      width: 50%; }
+
+  .our-articles .content-our-articles {
+    flex-wrap: wrap;
+    justify-content: center; }
+    .our-articles .content-our-articles .item-content-our-articles {
+      width: 90%; }
+
+  footer {
+    flex-wrap: wrap; }
+    footer .item-footer {
+      width: 100%; } }
+@media screen and (max-width: 540px) {
+  body {
+    max-width: 540px;
+    margin: 0 auto; }
+
+  .header-page .logo-slogan .slogan {
+    display: none; } }
 
 /*# sourceMappingURL=style.css.map */
