--- a/01_thangnv/demogiaodien(scss_bootstrap)/css/style.scss
+++ b/01_thangnv/demogiaodien(scss_bootstrap)/css/style.scss
@@ -11,8 +11,6 @@ body {
     margin: 0 auto;
 }
 
-
-
 li {
     list-style-type:none; 
 }
@@ -31,6 +29,7 @@ a {
         flex-direction: column;
         height: 100%;
         width: 35%;
+        background: transparent;
 
         .logo{
             height: 55px;
@@ -42,6 +41,10 @@ a {
             font-size: 9.86px;
             margin: 0 3em;
         }
+    }
+
+    .mini-menu{
+        display: none;
     }
 
     .contact-menu{
@@ -60,7 +63,13 @@ a {
                 justify-content: flex-end;
 
                 li{
-                    margin: 0 0.5em;
+                    margin-left:1em;
+                    p{
+                        img{
+                            margin-right:0.2em;
+                            margin-bottom: 0.3em;
+                        }
+                    }
                 }
             }
         }
@@ -82,7 +91,7 @@ a {
                     li{
                         height: 20px;
                         line-height: 20px;
-                        margin: 0 0.3em;
+                        margin-left: 0.6em;
 
                         a{
                             height: 20px;
@@ -104,13 +113,12 @@ a {
 
             .right-menu{
 
-                margin-left: 0.5em;
-
                 ul{
                     display: flex;
                     
                     li{
-                        margin: -0.3em 0.2em;
+                        margin-top: -0.3em;
+                        margin-left:  0.4em;
                     }
                 }
             }
@@ -118,10 +126,9 @@ a {
     }
 }
 
-.out-services{
+.our-services{
     text-align: center;
-
-
+    width: 100%;
     h2{
         margin: 32px;
         font-size: 29.3 px;
@@ -134,43 +141,313 @@ a {
             margin: 0 10px;
         }
     }    
-    
-    div img{
-        height: 96px;
-    }
 
-
-    div h5{
-        margin-top:12px; 
-        font-size: 14.86px;
-        font-weight: bold;
-        height: 40px;
-        line-height: 20px;
-        overflow: hidden;
-    }
-
-    div p{
-        font-size: 11.86px;
-        height: 60px;
-        line-height: 20px;
-        overflow: hidden;
-    }
-
-    .mobile{
+    .item-content-our-services{
         width: 35%;
-    }
-    .web{
-        width: 35%;
-    }
-    .custom{
-        width: 35%;
+
+        img{
+            height: 96px;
+        }
+
+        h5{
+            margin-top:12px; 
+            font-size: 14.86px;
+            font-weight: bold;
+            height: 20px;
+            line-height: 20px;
+            overflow: hidden;
+        }
+
+        p{
+            font-size: 11.86px;
+            height: 60px;
+            line-height: 20px;
+            overflow: hidden;
+        }
     }
 
 }
 
 
+.our-clients{
+
+    text-align: center;
+
+    h2{
+        margin: 32px;
+        font-size: 29.3 px;
+        font-weight: bold;
+    }
+
+    .content-our-clients{
+        display: flex;
+        margin: 0 2em;
+        div{
+            width: 20%;
+        }
+    }
+
+    
+}
+
+.our-articles{
+    h2{
+        margin: 32px;
+        font-size: 29.3 px;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .content-our-articles{
+        display: flex;
+        
+        h2{
+            margin: 32px;
+            font-size: 29.3 px;
+            font-weight: bold;
+        }
+        
+        .item-content-our-articles{
+            margin: 0 10px;
+            width: 35%;
+            
+            img{
+                width: 100%;
+            }
+    
+            h5{
+                margin-top:0.8em; 
+                font-size: 13.3px;
+                font-weight: bold;
+                height: 20px;
+                line-height: 20px;
+                overflow: hidden;
+            }
+    
+            p{
+                font-size: 9.86px;
+                height: 54px;
+                line-height: 18px;
+                overflow: hidden;
+            }
+
+        }
+    }  
+    
+}
+
+
+footer{
+    min-height: 400px;
+    background: #323232;
+    display: flex;
+
+    .item-footer{
+        margin: 2em 2em;
+        width: 35%;
+        color: #ffffff;
+        font-weight: bold;
+        h4{
+            font-size: 14.86px;
+            line-height: 20px;
+            font-weight: bold;
+        }
+
+        img{
+            height: 3px;
+            width: 100%;
+        }
+        div{
+            p{
+                color: #ffffff;
+                font-size: 10.86px;
+            }
+        }
+        .map-info{
+            width: 100%;
+            height: auto;
+        }
+    }
+}
+
+.firstlastname{
+    display: flex;
+    #firstname{
+        width: 45%;
+        
+    }
+    #lastname{
+        margin-left:0.3em; 
+        width: 60%;
+    }
+}
 
 // Edit Bootstrap
 .carousel-item img {
     width: 100%;
 }
+.btn{
+    height: 30px;
+    margin: 0;
+    padding: 0 0.2em;
+}
+.form-group{
+    label{
+        font-size: 10.86px;
+        color: #66614d;
+        font-weight: bold;
+    }
+}
+.form-control{
+    height: 30px;
+}
+
+
+
+// Media query
+@media screen and (max-width:800px){
+
+    body {
+        max-width: 800px;
+        margin: 0 auto; 
+    }
+
+    .our-services{
+        .content-our-services{
+            flex-wrap: wrap;
+            justify-content: center;
+            .item-content-our-services{
+                width: 45%;
+            }
+        }
+    }
+
+    .our-clients{
+        .content-our-clients{
+            flex-wrap: wrap;
+            justify-content: center;
+            div{
+                width: 33%;
+            }
+        }
+    }
+
+    .our-articles{
+        .content-our-articles{
+            flex-wrap: wrap;
+            justify-content: center;
+            .item-content-our-articles{
+                width: 45%;
+            }
+        }
+    }
+
+    footer{
+        flex-wrap: wrap;
+        .item-footer{
+            width: 100%;
+        }
+    }
+}
+
+@media screen and (max-width:680px){
+    .header-page{
+        .contact-menu{
+            display: none;
+        } 
+    
+        .mini-menu{
+            margin-right: 2em;
+            width: 75%;
+            display: flex;
+            flex-direction: row-reverse;
+            position: relative;
+            margin-top: 30px;
+            div{
+                margin-top: 32px;
+                background: #ffffff;
+                border-radius:5px; 
+                position: absolute;
+                z-index: 100;
+                a{
+                    color: #00a2ed;
+                    font-weight: bold;
+                    font-size: 11.86px;
+                }
+                
+            }
+            button{
+                color: #00a2ed;
+                background: #ffffff;
+                border: 2px solid #00a2ed;
+                padding: 0 5px;
+                font-weight: bold;
+                font-size: 11.86px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:640px){
+    body {
+        max-width: 640px;
+        margin: 0 auto; 
+    }
+
+    .our-services{
+        .content-our-services{
+            flex-wrap: wrap;
+            justify-content: center;
+            .item-content-our-services{
+                width: 65%;
+            }
+        }
+    }
+
+    .our-clients{
+        .content-our-clients{
+            flex-wrap: wrap;
+            justify-content: center;
+            div{
+                width: 50%;
+            }
+        }
+    }
+
+    .our-articles{
+        .content-our-articles{
+            flex-wrap: wrap;
+            justify-content: center;
+            .item-content-our-articles{
+                width: 90%;
+            }
+        }
+    }
+
+    footer{
+        flex-wrap: wrap;
+        .item-footer{
+            width: 100%;
+        }
+    }
+}
+
+@media screen and (max-width:540px){
+    body {
+        max-width: 540px;
+        margin: 0 auto; 
+    }
+
+    .header-page{
+        .logo-slogan{
+            .slogan{
+                display: none ;
+            }
+        }
+    }
+}
+
+
+
+
+
