--- a/01_thangnv/demogiaodien(scss_bootstrap)/css/style.css
+++ b/01_thangnv/demogiaodien(scss_bootstrap)/css/style.css
@@ -90,24 +90,23 @@ a {
     font-weight: bold; }
   .our-services .content-our-services {
     display: flex; }
-    .our-services .content-our-services div {
-      margin: 0 10px; }
-  .our-services .item-content-our-services {
-    width: 35%; }
-    .our-services .item-content-our-services img {
-      height: 96px; }
-    .our-services .item-content-our-services h5 {
-      margin-top: 12px;
-      font-size: 14.86px;
-      font-weight: bold;
-      height: 20px;
-      line-height: 20px;
-      overflow: hidden; }
-    .our-services .item-content-our-services p {
-      font-size: 11.86px;
-      height: 60px;
-      line-height: 20px;
-      overflow: hidden; }
+    .our-services .content-our-services .item-content-our-services {
+      width: 35%;
+      margin: 5px 10px; }
+      .our-services .content-our-services .item-content-our-services img {
+        height: 96px; }
+      .our-services .content-our-services .item-content-our-services h5 {
+        margin-top: 12px;
+        font-size: 14.86px;
+        font-weight: bold;
+        height: 20px;
+        line-height: 20px;
+        overflow: hidden; }
+      .our-services .content-our-services .item-content-our-services p {
+        font-size: 11.86px;
+        height: 60px;
+        line-height: 20px;
+        overflow: hidden; }
 
 .our-clients {
   text-align: center; }
@@ -173,29 +172,31 @@ footer {
       width: 100%;
       height: auto; }
 
-.firstlastname {
-  display: flex; }
-  .firstlastname #firstname {
-    width: 45%; }
-  .firstlastname #lastname {
-    margin-left: 0.3em;
-    width: 60%; }
-
 .carousel-item img {
   width: 100%; }
 
 .btn {
-  height: 30px;
+  height: 20px;
   margin: 0;
-  padding: 0 0.2em; }
+  padding: 0 0.2em;
+  font-size: 11.86px;
+  font-weight: bold; }
 
 .form-group label {
   font-size: 10.86px;
   color: #66614d;
   font-weight: bold; }
+.form-group .firstlastname {
+  display: flex; }
+  .form-group .firstlastname #firstname {
+    width: 45%; }
+  .form-group .firstlastname #lastname {
+    margin-left: 0.3em;
+    width: 60%; }
 
 .form-control {
-  height: 30px; }
+  height: 30px;
+  font-size: 12.86px; }
 
 @media screen and (max-width: 800px) {
   body {
@@ -278,7 +279,7 @@ footer {
     flex-wrap: wrap; }
     footer .item-footer {
       width: 100%; } }
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 560px) {
   body {
     max-width: 540px;
     margin: 0 auto; }
