demo_lazyload&demo_media

--- a/05_tupa/cat-giao-dien/css/style.css
+++ b/05_tupa/cat-giao-dien/css/style.css
@@ -49,6 +49,7 @@ body main footer .footer-contact { float: left; widows: 30%; margin-left: 30px; 
 body main footer .footer-contact .footer-contact-title { font-size: 25px; }
 body main footer .footer-info { float: left; width: 30%; margin-left: 30px; margin-top: 40px; }
 body main footer .footer-info .footer-info-title { font-size: 25px; }
+body main footer .line1 { border: 1px solid #404040; margin-bottom: 20px; }
 
 @media all and (max-width: 1000px) { main { width: 100%; }
   header { width: 100%; }
