--- a/05_tupa/cat-giao-dien/css/style.scss
+++ b/05_tupa/cat-giao-dien/css/style.scss
@@ -218,6 +218,10 @@ body{
                     font-size:25px;
                 }
             }
+            .line1{
+                border:1px solid #404040;
+                margin-bottom:20px;
+            }
         }
     }
 }
