--- a/06_trongnd/PDS/CSS/style.scss
+++ b/06_trongnd/PDS/CSS/style.scss
@@ -191,7 +191,7 @@ body{
             color:white;
             .footer-about{
                 float:left;
-                width:250px;
+                width:25%;
                 margin-left:30px;
                 margin-top:40px;
                 .footer-about-title{
@@ -203,7 +203,7 @@ body{
             }
             .footer-contact{
                 float:left;
-                width: 300px;
+                width: 30%;
                 margin-left:30px;
                 margin-top:40px;
                 .footer-contact-title{
@@ -212,7 +212,7 @@ body{
             }
             .footer-info{
                 float:left;
-                width: 300px;
+                width: 30%;
                 margin-left:30px;
                 margin-top:40px;
                 .footer-info-title{
