--- a/02_cuongnq/Convert PSD to HTML/css/header.css
+++ b/02_cuongnq/Convert PSD to HTML/css/header.css
@@ -59,7 +59,7 @@ header .slide {
   position: relative;
   width: 100%;
   height: 300px;
-  background-image: url("images/slider1.png"); }
+}
   header .slide .text {
     width: 50%;
     color: #fff;
