--- a/05_tupa/PDS/style/below.css
+++ b/05_tupa/PDS/style/below.css
@@ -48,10 +48,10 @@ body main footer .line1 { border: 1px solid #404040; margin-bottom: 20px; }
   .slide { width: 100%; }
   content { width: 100%; }
   footer { width: 100%; } }
-@media all and (max-width: 800px) { main { width: 80%; }
+@media all and (max-width: 800px) { 
   .header-left { width: 100%; text-align: center; margin-left: 200px; margin-bottom: 20px; }
   .header-right { width: 100%; clear: both; }
-  .slide { width: 75%; }
+  .menu{display: none}
   content section.title { width: 100%; margin-left: -150px; }
   content article.box-main ul li { width: 100%; clear: both; margin-left: 180px; }
   content article.people ul li { width: 100%; clear: both; }
