--- a/07_kiendv/Vinsofts/src/css/above.css
+++ b/07_kiendv/Vinsofts/src/css/above.css
@@ -12,17 +12,24 @@ header nav {
       padding: 0 30px 0 0; }
   header nav .navbar-brand p {
     font-size: 9px; }
+header .fixed-top {
+  top: 20px; }
 
 .contact {
-  z-index: 10001;
-  position: fixed;
-  top: 10px;
-  right: 10px; }
+  background: #ffffff;
+  text-align: right; }
 
 .bg-1 {
   position: relative; }
-  .bg-1 text {
+  .bg-1 .text {
     position: absolute;
-    top: 0; }
+    bottom: 10px;
+    right: 10px;
+    color: #ffffff; }
+
+.carousel-indicators li {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%; }
 
 /*# sourceMappingURL=above.css.map */
