--- a/07_kiendv/Vinsofts/src/sass/above.scss
+++ b/07_kiendv/Vinsofts/src/sass/above.scss
@@ -23,17 +23,25 @@ header {
 			}
 		}
 	}
+	.fixed-top {
+		top:20px;
+	}
 }
 .contact {
-	z-index: 10001;
-	position: fixed;
-	top: 10px;
-	right: 10px;
+	background: #ffffff;
+	text-align: right;
 }
 .bg-1 {
 	position: relative;
-	text {
+	.text {
 		position: absolute;
-		top: 0;
+		bottom: 10px;
+		right: 10px;
+		color: #ffffff;
 	}
+}
+.carousel-indicators li {
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
 }
