--- a/04_datht/cat-web/css/above.css
+++ b/04_datht/cat-web/css/above.css
@@ -1,10 +1,3 @@
-* {
-  padding: 0;
-  margin: 0; }
-
-.container--max {
-  max-width: 960px; }
-
 header .header__logo {
   padding-top: 10px;
   padding-left: 70px;
@@ -38,37 +31,12 @@ header .header__right {
       padding-left: 10px;
       display: inline; }
 
-footer {
-  background: #323232;
-  padding-bottom: 30px;
-  color: wheat; }
-  footer h4 {
-    padding-bottom: 10px;
-    border-bottom: 1px solid wheat; }
-  footer .form-guest {
-    padding: 0px; }
-    footer .form-guest #add__form {
-      color: #323232;
-      background: wheat;
-      padding: 5px 10px;
-      border-radius: 10px;
-      display: none; }
-
 section {
   text-align: center; }
   section .slideshow {
     margin: 0px; }
   section .services {
     padding: 0px 20px 30px 20px; }
-  section .clients {
-    margin: 15px 0px; }
-  section .articles {
-    padding: 0px 20px 30px 20px; }
-    section .articles .articles-about {
-      text-align: justify; }
-
-.dash {
-  margin-top: 10px; }
 
 @media only screen and (max-width: 768px) {
   header .header__logo {
@@ -89,23 +57,6 @@ section {
     header .header__right .header__right__menu .button_nav_toggle {
       padding: 0px; }
   header .header__right .header__right__icon {
-    display: none; }
-
-  section .clients img {
-    padding: 10px; }
-
-  footer .form-guest #add__form {
-    color: #323232;
-    background: wheat;
-    padding: 5px 10px;
-    border-radius: 10px;
-    display: block; }
-  footer .form-guest .form {
-    display: none; }
-  footer .map {
-    display: none; } }
-@media (min-width: 768px) and (max-width: 992px) {
-  footer .map {
     display: none; } }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=above.css.map */
